fixed too large image width on file drop

--- a/srv/stylesheets/bootstrap-theme.css
+++ b/srv/stylesheets/bootstrap-theme.css
@@ -1,10 +1,15 @@
+.empty {
+    font-size: 40px;
+    text-align: center;
+    padding: 150px 100px;
+}
+
 .thumbnail {
     border-width: 3px;
     border-style: dashed;
 }
 
-.placeholder {
-    font-size: 40px;
-    text-align: center;
-    padding: 150px 100px;
+.upload img,
+.result img {
+    max-width: 100%;
 }
